--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -6,6 +6,24 @@
     margin-bottom: var(--mb-2);
 }
 
+a,
+.btn {
+  transition: all 300ms ease;
+}
+
+.btn {
+    font-weight: 600;
+    transition: all 300ms ease;
+    padding: 1rem;
+    width: 8rem;
+    border-radius: 2rem;
+  }
+
+  .project-btn {
+    color: black;
+    border-color: rgb(163, 163, 163);
+  }
+
 .project__item {
     color: var(--title-color);
     padding: 0.25rem 0.75rem;
